--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,9 +18,9 @@ include_directories(${COMMON_INCLUDES})
 file(GLOB TEST_SRC_FILES ${PROJECT_SOURCE_DIR}/test/*.cpp)
 
 
-set(SRC_FILES ${PROJECT_SOURCE_DIR}/src/dean.cpp
-              ${PROJECT_SOURCE_DIR}/src/student.cpp
-              ${PROJECT_SOURCE_DIR}/src/group.cpp)
+set(SRC_FILES ${PROJECT_SOURCE_DIR}/src/Deanery.cpp
+              ${PROJECT_SOURCE_DIR}/src/Student.cpp
+              ${PROJECT_SOURCE_DIR}/src/Group.cpp)
 
 set(CMAKE_CXX_STANDARD 11)
 
